beginning to create student template… at least the general structure

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
         <h1>MICA Grad Show 2014</h1>
         <p>a big image will be in the background here</p>
         <p>The mockup they currently have has this as a giant slideshow, but I think we could just load 1 image randomly from some pool and have a different static image each time the page loads... is this easy with JS? I used to be able to do it with PHP really easily</p>
-        
       </div>
       <br/>
     </header>
@@ -65,6 +64,7 @@
               <p class="lead col-sm-8">This year’s Spring and Summer Graduate Exhibition at the Maryland Institute College of Art will present work to the MICA community and the public from January–July, 2014. The season includes Fine Art and Graphic Design exhibitions and critiques, gallery talks, installations, symposia, public programs, and student curated shows throughout the city of Baltimore.</p>
             </div>
               <p>I guess this text should go in its own file? or is it fine to just have in the HTML</p>
+              <p> comes from here: https://docs.google.com/document/d/181k7UtYfjSsumP4QQpTsjkRaun3wWPRWMQvleEg8KiM -- can this work as a way to make this section editable?</p>
           </article>
         
           <article id="schedule">
