--- a/index.html
+++ b/index.html
@@ -168,12 +168,13 @@
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/lodash.min.js"></script>
     <script src="js/bootstrap.js"></script>
-    <!-- Load Sheetrock from the local environment. -->
     <script src="js/jquery.sheetrock.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.1.2/handlebars.min.js"></script>
+    <script src="js/mfathesis.js"></script>
 
+    <!-- Load Sheetrock from the local environment. -->
     <script>
       $('document').ready(function() {
         // Define spreadsheet URL.
