Hide header images by default

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <header>
       <img class="backgroundfill" src="img/id0518670.jpg" />
+      <img class="backgroundfill" src="img/id0518670-alt.jpg" />
       <div class="container">
         <h1>MICA Grad Show 2014</h1>
         <p>a big image will be in the background here</p>
