--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <header>
       <img class="backgroundfill" src="img/id0518670.jpg" />
       <img class="backgroundfill" src="img/id0518670-alt.jpg" />
+      <img class="backgroundfill" src="img/id0518670-alt2.jpg" />
       <div class="container">
         <h1>MICA Grad Show 2014</h1>
         <p>a big image will be in the background here</p>
