Add list.js and remove sheetrock

--- a/index.html
+++ b/index.html
@@ -155,14 +155,13 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/lodash.min.js"></script>
+    <script src="js/list.min.js"></script>
     <script src="js/bootstrap.js"></script>
-    <script src="js/jquery.sheetrock.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.1.2/handlebars.min.js"></script>
     <script src="js/mfathesis.js"></script>
 
     <!-- Load Sheetrock from the local environment. -->
     <script>
-      $('document').ready(function() {
+/*      $('document').ready(function() {
         // Define spreadsheet URL.
         var studentSpreadsheet   = 'https://docs.google.com/spreadsheet/ccc?key=0Al-kEdVYvxtGdG1wOEFNUUNEWW1CaDBlbXBHYlhQN0E#gid=0';
         var showDatesSpreadsheet = 'https://docs.google.com/spreadsheet/ccc?key=0Al-kEdVYvxtGdHZiZ2lQQjA1bkl0cGpGb0ZSZHJVRkE#gid=0';
@@ -201,7 +200,7 @@
           rowHandler: galleryTemplate
         });
 
-      });
+      }); */
     </script>
 
   </body>
