--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <div  class="col-sm-4">
 <!--                 <p>sidebar of Gallery names and locations<br/> can be made into a JSON/YAML list - galleries.yml</p> -->
                 <ol id="galleries-data" class="gallery-infoblocks">
-                  <script id="gallery-template" type="text/x-handlebars-template">
+                  <script id="gallery-template" type="text/x-mustache-template">
                     <li class="gallery-info">
                       <h4>{{cells.B}}</h4>
                       <p><strong>{{cells.A}}</strong></p>
@@ -117,7 +117,7 @@
 
             <!-- holy crap, Sheetrock is working pretty well so far -->
             <ul class="row grid-display" id="projects-demo">
-              <script id="students-template" type="text/x-handlebars-template">
+              <script id="students-template" type="text/x-mustache-template">
                 <li class="col-sm-3 student thumb">
                   <div class="block">
                     <p>Somehow we need to feed an image here... and match it with the ID: {{cells.ID}}</p>
@@ -156,6 +156,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/lodash.min.js"></script>
     <script src="js/list.min.js"></script>
+    <script src="js/hogan.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/mfathesis.js"></script>
 
