--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 {{#student}}
                 <li class="col-sm-3 student thumb">
                   <div class="block">
-                    <p>Somehow we need to feed an image here... and match it with the ID: {{cells.ID}}</p>
+                    <p>Somehow we need to feed an image here... and match it with the ID: {{id}}</p>
                     <div class="info">
                       <h4 class="name">{{firstname}} {{lastname}}</h4>
                       <p class="program">{{cells.Program}}</p>
