Get program in the student list

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <p>Somehow we need to feed an image here... and match it with the ID: {{id}}</p>
                     <div class="info">
                       <h4 class="name">{{firstname}} {{lastname}}</h4>
-                      <p class="program">{{cells.Program}}</p>
+                      <p class="program">{{program}}</p>
                       <p class="other">Also need show# >> this is in another doc, but perhaps this can just be added to the main SS?</p>
                     </div>
                   </div>
