Filter blank results

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <div class="info">
                       <h4 class="name">{{firstname}} {{lastname}}</h4>
                       <p class="program">{{program}}</p>
-                      <p class="other">Also need show# >> this is in another doc, but perhaps this can just be added to the main SS?</p>
+                      <!-- <p class="other">Also need show# >> this is in another doc, but perhaps this can just be added to the main SS?</p> -->
                     </div>
                   </div>
                 </li>
