--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   <li>All Projects</li> <!-- what's the default sort in this mode? alphabetical by lastname? -->
                   <li>Group By:
                     <ul>
-                      <li>Program</li> <!-- these are dynmaic sorts list.js? -->
+                      <li><a href="#" class="sort-studentlist" data-type="program">Program</a></li> <!-- these are dynmaic sorts list.js? -->
                       <li>Gallery</li>
                       <li>Show Date (Show Num?)</li>
                     </ul>
