tell proper placement for about text

--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
             <div class="row">
               <p class="lead col-sm-8">This year’s Spring and Summer Graduate Exhibition at the Maryland Institute College of Art will present work to the MICA community and the public from January–July, 2014. The season includes Fine Art and Graphic Design exhibitions and critiques, gallery talks, installations, symposia, public programs, and student curated shows throughout the city of Baltimore.</p>
             </div>
-              <p>I guess this text should go in its own file? or is it fine to just have in the HTML</p>
-              <p> comes from here: https://docs.google.com/document/d/181k7UtYfjSsumP4QQpTsjkRaun3wWPRWMQvleEg8KiM -- can this work as a way to make this section editable?</p>
+              <p>There is updated text for this - in content/aboutshow.md</p>
           </article>
         
           <article id="schedule">
