--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <li><a href="#students">Students</a>
                 <ul> <!-- this submenu only shows up when in students area -->
                   <li>All Projects</li> <!-- what's the default sort in this mode? alphabetical by lastname? -->
-                  <li>Group By:
+                  <li><span class="nav-label">Group By</span>
                     <ul>
                       <li><a href="#" class="sort-studentlist" data-type="program">Program</a></li> <!-- these are dynmaic sorts list.js? -->
                       <li>Gallery</li>
