--- a/index.html
+++ b/index.html
@@ -64,13 +64,10 @@
               <li><a href="#galleries">Galleries</a></li>
               <li><a href="#students">Students</a>
                 <ul> <!-- this submenu only shows up when in students area -->
-<<<<<<< HEAD
                   <li>All Projects</li> <!-- what's the default sort in this mode? alphabetical by lastname? -->
                   <li><span class="nav-label">Group By</span>
-=======
                   <li><a href="#" class="sort-studentlist" data-type="all">All Projects</a></li> <!-- what's the default sort in this mode? alphabetical by lastname? -->
-                  <li>Group By:
->>>>>>> e25dc0e0b2f7f62f8ffe39aacb5b4487b8bdb8fa
+                  <li><span class="nav-label">Group By</span>
                     <ul>
                       <li><a href="#" class="sort-studentlist" data-type="program">Program</a></li> <!-- these are dynmaic sorts list.js? -->
                       <li>Gallery</li>
