Demo gallery thing

--- a/index.html
+++ b/index.html
@@ -70,7 +70,18 @@
                   <li><span class="nav-label">Group By</span>
                     <ul>
                       <li><a href="#" class="sort-studentlist" data-type="program">Program</a></li> <!-- these are dynmaic sorts list.js? -->
-                      <li>Gallery</li>
+                      <li>
+                          <div class="btn-group">
+                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                              Gallery
+                              <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" id="gallery-filter">
+                              <li><a href="#" data-gallery="Riggs">Riggs/Leidy Gallery</a></li>
+                              <li><a href="#" data-gallery="Decker">Decker</a></li>
+                            </ul>
+                          </div>
+                      </li>
                       <li>Show Date (Show Num?)</li>
                     </ul>
                   </li>
@@ -147,7 +158,7 @@
                     <div class="info">
                       <h4 class="name">{{firstname}} {{lastname}}</h4>
                       <p class="program">{{program}}</p>
-                      <!-- <p class="other">Also need show# >> this is in another doc, but perhaps this can just be added to the main SS?</p> -->
+                      <p class="exhibitionlocation" style="display:none">{{exhibitionlocation}}</p>
                     </div>
                   </div>
                 </li>
