--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       <img src="img/headers/id0536542.jpg" class="backgroundfill">
       <img src="img/headers/id0539860.jpg" class="backgroundfill">
       <div class="container">
-        <h1>MICA Grad Show 2014</h1>
-        <p>a big image will be in the background here</p>
+        <h1 style="display:none;">MICA Grad Show 2014</h1>
+        <img src="img/header_pattern.png" />
       </div>
       <br/>
     </header>
