--- a/index.html
+++ b/index.html
@@ -68,16 +68,16 @@
                   <li><span class="nav-label">Group By</span>
                     <ul>
                       <li><a href="#" class="sort-studentlist" data-type="program">Program</a></li> <!-- these are dynmaic sorts list.js? -->
-                      <li>Gallery</li>
-                      <li>Show Date (Show Num?)</li>
+                      <li><a href="#" class="sort-studentlist" data-type="gallery">Gallery</a></li>
+                      <li><a href="#" class="sort-studentlist" data-type="showdate">Show Date</a></li>
                     </ul>
                   </li>
                 </ul>
               </li>
               <!--
-<li><a href="http://mica.edu/About_MICA.html">About MICA</a></li> <!-- where does this link to? -->
+              <li><a href="http://mica.edu/About_MICA.html">About MICA</a></li> 
               <li><img src="img/mica.png" /></li>
--->
+              -->
             </ul>
           </nav>
         </div>
