Add more demo galleries

--- a/index.html
+++ b/index.html
@@ -75,8 +75,13 @@
                               <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" id="gallery-filter">
-                              <li><a href="#" data-gallery="Riggs">Riggs/Leidy Gallery</a></li>
+                              <li><a href="#" data-gallery="D center">D Center</a></li>
                               <li><a href="#" data-gallery="Decker">Decker</a></li>
+                              <li><a href="#" data-gallery="Fox">Fox 3</a></li>
+                              <li><a href="#" data-gallery="Leidy">Leidy</a></li>
+                              <li><a href="#" data-gallery="Meyerhoff">Meyerhoff</a></li>
+                              <li><a href="#" data-gallery="Pinkard">Pinkard</a></li>                
+                              <li><a href="#" data-gallery="Riggs">Riggs/Leidy</a></li>
                             </ul>
                           </div>
                       </li>
