--- a/index.html
+++ b/index.html
@@ -22,31 +22,30 @@
   <body data-spy="scroll" data-target=".mainnav">
 
     <header>
-      <img src="img/headers/id0396773.jpg" class="backgroundfill">
-      <img src="img/headers/id0396773.jpg" class="backgroundfill">
+<!--       <img src="img/headers/id0396773.jpg" class="backgroundfill"> -->
       <img src="img/headers/id0445714.jpg" class="backgroundfill">
-      <img src="img/headers/id0479534-tall.jpg" class="backgroundfill">
+<!--       <img src="img/headers/id0479534-tall.jpg" class="backgroundfill"> -->
       <img src="img/headers/id0479534.jpg" class="backgroundfill">
       <img src="img/headers/id0495100-1.jpg" class="backgroundfill">
-      <img src="img/headers/id0495100-tall.jpg" class="backgroundfill">
+<!--       <img src="img/headers/id0495100-tall.jpg" class="backgroundfill"> -->
       <img src="img/headers/id0495100.jpg" class="backgroundfill">
       <img src="img/headers/id0495403-1.jpg" class="backgroundfill">
-      <img src="img/headers/id0500264.jpg" class="backgroundfill">
-      <img src="img/headers/id0512878.jpg" class="backgroundfill">
+<!--       <img src="img/headers/id0500264.jpg" class="backgroundfill"> -->
+<!--       <img src="img/headers/id0512878.jpg" class="backgroundfill"> -->
       <img src="img/headers/id0513690.jpg" class="backgroundfill">
       <img src="img/headers/id0514534.jpg" class="backgroundfill">
       <img src="img/headers/id0516358.jpg" class="backgroundfill">
-      <img src="img/headers/id0516545-2.jpg" class="backgroundfill">
+<!--       <img src="img/headers/id0516545-2.jpg" class="backgroundfill"> -->
       <img src="img/headers/id0516545.jpg" class="backgroundfill">
-      <img src="img/headers/id0518445.jpg" class="backgroundfill">
-      <img src="img/headers/id0518471.jpg" class="backgroundfill">
-      <img src="img/headers/id0518574.jpg" class="backgroundfill">
+<!--       <img src="img/headers/id0518445.jpg" class="backgroundfill"> -->
+<!--       <img src="img/headers/id0518471.jpg" class="backgroundfill"> -->
+<!--       <img src="img/headers/id0518574.jpg" class="backgroundfill"> -->
       <img src="img/headers/id0518670.jpg" class="backgroundfill">
       <img src="img/headers/id0518979.jpg" class="backgroundfill">
       <img src="img/headers/id0519030.jpg" class="backgroundfill">
-      <img src="img/headers/id0524822.jpg" class="backgroundfill">
-      <img src="img/headers/id0536542.jpg" class="backgroundfill">
-      <img src="img/headers/id0539860.jpg" class="backgroundfill">
+<!--       <img src="img/headers/id0524822.jpg" class="backgroundfill"> -->
+<!--       <img src="img/headers/id0536542.jpg" class="backgroundfill"> -->
+<!--       <img src="img/headers/id0539860.jpg" class="backgroundfill"> -->
       <div class="ontop">
         <h1 style="display:none;">MICA Grad Show 2014</h1>
         <img src="img/header_pattern.png" />
