added header images

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
   <body data-spy="scroll" data-target=".mainnav">
 
     <header>
-<!--       <img src="img/headers/id0396773.jpg" class="backgroundfill"> -->
+		<img src="img/headers/id0389032.jpg" class="backgroundfill">
       <img src="img/headers/id0445714.jpg" class="backgroundfill">
-<!--       <img src="img/headers/id0479534-tall.jpg" class="backgroundfill"> -->
+	 <img src="img/headers/id0516545_2.jpg" class="backgroundfill">
       <img src="img/headers/id0479534.jpg" class="backgroundfill">
       <img src="img/headers/id0495100-1.jpg" class="backgroundfill">
-<!--       <img src="img/headers/id0495100-tall.jpg" class="backgroundfill"> -->
+      <img src="img/headers/id519216.jpg" class="backgroundfill"> 
       <img src="img/headers/id0495100.jpg" class="backgroundfill">
       <img src="img/headers/id0495403-1.jpg" class="backgroundfill">
-<!--       <img src="img/headers/id0500264.jpg" class="backgroundfill"> -->
+       <img src="img/headers/id04760846.jpg" class="backgroundfill">
 <!--       <img src="img/headers/id0512878.jpg" class="backgroundfill"> -->
       <img src="img/headers/id0513690.jpg" class="backgroundfill">
       <img src="img/headers/id0514534.jpg" class="backgroundfill">
