--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body data-spy="scroll" data-target=".mainnav">
 
     <header>
-		<img src="img/headers/id0389032.JPG" class="backgroundfill">
+		<img src="img/headers/id0389032.jpg" class="backgroundfill">
       <img src="img/headers/id0445714.jpg" class="backgroundfill">
 	 <img src="img/headers/id0516545_2.jpg" class="backgroundfill">
       <img src="img/headers/id0479534.jpg" class="backgroundfill">
