print out gallery name and want to print out show date as well

--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
                     <div class="info">
                       <h4 class="name">{{firstname}} {{lastname}}</h4>
                       <p class="program">{{program}}</p>
-                      <p class="exhibitionlocation" style="display:none">{{exhibitionlocation}}</p>
+                      <p class="exhibitionlocation">{{exhibitionlocation}}</p>
+                      <p class="show-date">Print out show date?</p>
                     </div>
                   </div>
                 </li>
