More nav massage

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <li><a href="#students">Students</a>
                 <ul> <!-- this submenu only shows up when in students area -->
                   <li><a href="#" class="sort-studentlist" data-type="all">All Projects</a></li> <!-- what's the default sort in this mode? alphabetical by lastname? -->
-                  <li><span class="nav-label">Group By</span>
+                  <li><span class="nav-label">Filter By</span>
                     <ul>
                       <li><a href="#" class="sort-studentlist" data-type="program">Program</a></li> <!-- these are dynmaic sorts list.js? -->
                       <div class="btn-group">
