instructions for images … coming soon

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 {{#students}}
                 <li class="col-sm-3 student thumb">
                   <div class="block">
-                    <p>Somehow we need to feed an image here... and match it with the ID: {{id}}</p>
+                    <p>Somehow we need to feed an image here... and match it with the ID: {{id}} - images for thumbnails are in img/thumbnails/</p>
                     <div class="info">
                       <h4 class="name">{{firstname}} {{lastname}}</h4>
                       <p class="program">{{program}}</p>
