--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
     <header>
       <img src="img/headers/id0445714.jpg" class="backgroundfill">
-	 <img src="img/headers/id0516545_2.jpg" class="backgroundfill">
+      <img src="img/headers/id0516545_2.jpg" class="backgroundfill">
       <img src="img/headers/id0479534.jpg" class="backgroundfill">
       <img src="img/headers/id0495100-1.jpg" class="backgroundfill">
       <img src="img/headers/id519216.jpg" class="backgroundfill"> 
       <img src="img/headers/id0495100.jpg" class="backgroundfill">
       <img src="img/headers/id0495403-1.jpg" class="backgroundfill">
-	<img src="img/headers/id0389032.jpg" class="backgroundfill">
+<!--       <img src="img/headers/id0389032.jpg" class="backgroundfill"> -->
       <img src="img/headers/id0513690.jpg" class="backgroundfill">
       <img src="img/headers/id0514534.jpg" class="backgroundfill">
       <img src="img/headers/id0516358.jpg" class="backgroundfill">
