--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <!--       <img src="img/headers/id0539860.jpg" class="backgroundfill"> -->
       <div class="ontop">
         <h1 style="display:none;">MICA Grad Show 2014</h1>
-        <img src="img/header_pattern.png" />
+        <img src="img/header_pattern.png" class="pattern" />
       </div>
     </header>
 
