--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     
+    <!-- Favicons--> 
+  	<link rel="shortcut icon" href="img/favicon.ico">
+  	<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+  	<link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
+  	<link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
+    
   </head>
   <body data-spy="scroll" data-target=".mainnav">
 
