omg does this work - trying to add images

--- a/index.html
+++ b/index.html
@@ -217,7 +217,8 @@
                 {{#students}}
                 <li class="col-sm-3 student thumb">
                   <div class="block">
-                    <p>Somehow we need to feed an image here... and match it with the ID: {{id}} - images for thumbnails are in img/thumbnails/</p>
+                    <img src="img/thumbnails/{{id}}.jpg" />
+<!--                     <p>Somehow we need to feed an image here... and match it with the ID: {{id}} - images for thumbnails are in img/thumbnails/</p> -->
                     <div class="info">
                       <h4 class="name">{{firstname}} {{lastname}}</h4>
                       <p class="program">{{program}}</p>
