--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
                 {{#students}}
                 <li class="col-sm-3 student thumb">
                   <div class="block">
-                    <p>Somehow we need to feed an image here... and match it with the ID: {{id}} - Why is this printing as 5 letters not 6 numbers?</p>
-                    <img src="img/thumbnails/{{id}}.jpg" />
+                    <p>Somehow we need to feed an image here... and match it with the ID: {{_id}} - Why is this printing as 5 letters not 6 numbers?</p>
+                    <img src="img/thumbnails/{{_id}}.jpg" />
                     <div class="info">
                       <h4 class="name">{{firstname}} {{lastname}}</h4>
                       <p class="program">{{program}}</p>
