--- a/index.html
+++ b/index.html
@@ -191,7 +191,6 @@
             <section class="row">
              <div class="col-sm-9">
                 <img class="map" src="img/gradshow_2014_map.gif" />
-                <button><a href="pdf/gradshow_2014_map.pdf">Download Map</a></button>
               </div>
               <div  class="col-sm-3">
                 <ul id="galleries-data">
@@ -199,9 +198,9 @@
                     <li><h5>Pinkard Gallery</h5></li>
                     <li><p>1305 W. Mount Royal Ave. Baltimore, MD 21217</p></li>
                     <li><h4>Fox Building</h4></li>
-                    <li><h5>Meyerhoff Gallery</h5></li>
                     <li><h5>Decker Gallery</h5></li>
                     <li><h5>Fox 3 Gallery</h5></li>
+                    <li><h5>Meyerhoff Gallery</h5></li>
                     <li><p>1303 W. Mount Royal Ave. Baltimore, MD 21217</p></li>
                     <li><h4>Studio Center</h4></li>
                     <li><h5>Riggs Gallery</h5></li>
@@ -212,13 +211,8 @@
                     <li><p>18 W. North Ave.Baltimore, MD 21218</p></li>
                     <li><h4>Off Campus</h4></li>
                     <li><h5>Curatorial Practice</h5></li>
-                    <li><p>Curatorial Students take over individual galleries all across Baltimore. View the Curatorial Map »</p></li>
-                    
-                    
-                    Download This Map
-
-
-                    </li>
+                    <li><p>Curatorial Students take over individual galleries all across Baltimore. View the Curatorial Map »</p></li>
+                    <li><button><a href="pdf/gradshow_2014_map.pdf">Download Map</a></button></li>
                 </ul>
               </div>
               <!-- Old potentially YAML version
