--- a/index.html
+++ b/index.html
@@ -113,13 +113,8 @@ P    X          F                K       J              F      J     Y      5   
                         <a href="#">Gallery </a><span class="caret"></span>
                       </button>
                       <ul class="dropdown-menu" id="gallery-filter">
-                        <li><a href="#" data-gallery="D center">D Center</a></li>
-                        <li><a href="#" data-gallery="Decker">Decker</a></li>
-                        <li><a href="#" data-gallery="Fox">Fox 3</a></li>
-                        <li><a href="#" data-gallery="Leidy">Leidy</a></li>
-                        <li><a href="#" data-gallery="Meyerhoff">Meyerhoff</a></li>
-                        <li><a href="#" data-gallery="Pinkard">Pinkard</a></li>                
-                        <li><a href="#" data-gallery="Riggs">Riggs/Leidy</a></li>
+                        <li><a href="#" data-gallery="D center">Graphic Design</a></li>
+                        <li><a href="#" data-gallery="Decker">Not Graphic Design</a></li>
                       </ul>
                     </div>
                   </li>
@@ -129,13 +124,9 @@ P    X          F                K       J              F      J     Y      5   
                         <a href="#">Show Date </a><span class="caret"></span>
                       </button>
                       <ul class="dropdown-menu" id="gallery-filter">
-                        <li><a href="#" data-gallery="D center">D Center</a></li>
-                        <li><a href="#" data-gallery="Decker">Decker</a></li>
-                        <li><a href="#" data-gallery="Fox">Fox 3</a></li>
-                        <li><a href="#" data-gallery="Leidy">Leidy</a></li>
-                        <li><a href="#" data-gallery="Meyerhoff">Meyerhoff</a></li>
-                        <li><a href="#" data-gallery="Pinkard">Pinkard</a></li>                
-                        <li><a href="#" data-gallery="Riggs">Riggs/Leidy</a></li>
+                        <li><a href="#" data-gallery="D center">Today</a></li>
+                        <li><a href="#" data-gallery="Decker">Tomorrow</a></li>
+                        <li><a href="#" data-gallery="Fox">NEVER</a></li>
                       </ul>
                     </div>
                   </li>
@@ -179,7 +170,7 @@ P    X          F                K       J              F      J     Y      5   
         
           <article id="intro">
             <div class="row">
-              <p class="lead col-sm-8">This year’s Spring and Summer Graduate Exhibition at the Maryland Institute College of Art will present work to the MICA community and the public from January–July, 2014. The season includes Fine Art and Graphic Design exhibitions and critiques, gallery talks, installations, symposia, public programs, and student curated shows throughout the city of Baltimore.</p>
+              <p class="lead col-sm-9">This year’s Spring and Summer Graduate Exhibition at the Maryland Institute College of Art will present work to the MICA community and the public from January–July, 2014. The season includes Fine Art and Graphic Design exhibitions and critiques, gallery talks, installations, symposia, public programs, and student curated shows throughout the city of Baltimore.</p>
             </div>
               <p>There is updated text for this - in content/aboutshow.md</p>
           </article>
@@ -202,7 +193,7 @@ P    X          F                K       J              F      J     Y      5   
         
           <article id="galleries">
             <h1>Participating Galleries</h1>
-            <p>Programs are spread across galleries; see student pages for individual locations.</p>
+            <p>Programs are spread across galleries; see student pages for individual locations. <a href="pdf/gradshow_2014_map.pdf">Download Map</a></p>
             <section class="row">
              <div class="col-sm-9">
                 <img class="map" src="img/gradshow_2014_map.gif" />
@@ -227,7 +218,6 @@ P    X          F                K       J              F      J     Y      5   
                     <li><h4>Off Campus</h4></li>
                     <li><h5>Curatorial Practice</h5></li>
                     <li><p>Curatorial Students take over individual galleries all across Baltimore. View the Curatorial Map »</p></li>
-                    <li><button><a href="pdf/gradshow_2014_map.pdf">Download Map</a></button></li>
                 </ul>
               </div>
               <!-- Old potentially YAML version
