another map format

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ P    X          F                K       J              F      J     Y      5   
             <p>Programs are spread across galleries; see student pages for individual locations. <a href="pdf/gradshow_2014_map.pdf">Download Map</a></p>
             <section class="row">
              <div class="col-sm-9">
-                <img class="map" src="img/gradshow_2014_map.gif" />
+                <img class="map" src="img/gradshow_2014_map.jpg" />
               </div>
               <div  class="col-sm-3">
                 <ul id="galleries-data">
