style links in p, dream nav

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ P    X          F                K       J              F      J     Y      5   
                     </div>
                   </li>
                 </ul>
+<!-- A Simpler Nav in case it's horrendously difficult to implement the other. 
                 <li><a href="#">Students: Simpler Nav</a>
                 <ul> 
                   <li><a href="#" class="sort-studentlist" data-type="all">All Projects</a></li>
@@ -158,6 +159,7 @@ P    X          F                K       J              F      J     Y      5   
                   </li>
                 </ul>
               </li>
+-->
               <!--
               <li><a href="http://mica.edu/About_MICA.html">About MICA</a></li> 
               <li><img src="img/mica.png" /></li>
@@ -193,7 +195,7 @@ P    X          F                K       J              F      J     Y      5   
         
           <article id="galleries">
             <h1>Participating Galleries</h1>
-            <p>Programs are spread across galleries; see student pages for individual locations. <a href="pdf/gradshow_2014_map.pdf">Download Map</a></p>
+            <p>Programs are spread across galleries; see student pages for individual locations. <a href="pdf/gradshow_2014_map.pdf" target="_blank">Download Map</a></p>
             <section class="row">
              <div class="col-sm-9">
                 <img class="map" src="img/gradshow_2014_map.jpg" />
@@ -202,19 +204,19 @@ P    X          F                K       J              F      J     Y      5   
                 <ul id="galleries-data">
                     <li><h4>Bunting Center</h4></li>
                     <li><h5>Pinkard Gallery</h5></li>
-                    <li><p>1305 W. Mount Royal Ave. Baltimore, MD 21217</p></li>
+                    <li><p>1305 W. Mount Royal Ave. <br/>Baltimore, MD 21217</p></li>
                     <li><h4>Fox Building</h4></li>
                     <li><h5>Decker Gallery</h5></li>
                     <li><h5>Fox 3 Gallery</h5></li>
                     <li><h5>Meyerhoff Gallery</h5></li>
-                    <li><p>1303 W. Mount Royal Ave. Baltimore, MD 21217</p></li>
+                    <li><p>1303 W. Mount Royal Ave. <br/>Baltimore, MD 21217</p></li>
                     <li><h4>Studio Center</h4></li>
                     <li><h5>Riggs Gallery</h5></li>
                     <li><h5>Leidy Gallery</h5></li>
-                    <li><p>131 W. North Ave. Baltimore, MD 21201</p></li>
+                    <li><p>131 W. North Ave. <br/>Baltimore, MD 21201</p></li>
                     <li><h4>D Center</h4></li>
                     <li><h5>D Center Gallery</h5></li>
-                    <li><p>18 W. North Ave.Baltimore, MD 21218</p></li>
+                    <li><p>18 W. North Ave. <br/>Baltimore, MD 21218</p></li>
                     <li><h4>Off Campus</h4></li>
                     <li><h5>Curatorial Practice</h5></li>
                     <li><p>Curatorial Students take over individual galleries all across Baltimore. View the Curatorial Map »</p></li>
