fixing some bad line ending characters

--- a/index.html
+++ b/index.html
@@ -203,20 +203,20 @@ P    X          F                K       J              F      J     Y      5   
               <div  class="col-sm-3">
                 <ul id="galleries-data">
                     <li><h4>Bunting Center</h4></li>
-                    <li><h5>Pinkard Gallery</h5></li>
+                    <li><h5>Pinkard Gallery</h5></li>
                     <li><p>1305 W. Mount Royal Ave. <br/>Baltimore, MD 21217</p></li>
                     <li><h4>Fox Building</h4></li>
-                    <li><h5>Decker Gallery</h5></li>
+                    <li><h5>Decker Gallery</h5></li>
                     <li><h5>Fox 3 Gallery</h5></li>
                     <li><h5>Meyerhoff Gallery</h5></li>
                     <li><p>1303 W. Mount Royal Ave. <br/>Baltimore, MD 21217</p></li>
-                    <li><h4>Studio Center</h4></li>
-                    <li><h5>Riggs Gallery</h5></li>
+                    <li><h4>Studio Center</h4></li>
+                    <li><h5>Riggs Gallery</h5></li>
                     <li><h5>Leidy Gallery</h5></li>
-                    <li><p>131 W. North Ave. <br/>Baltimore, MD 21201</p></li>
-                    <li><h4>D Center</h4></li>
+                    <li><p>131 W. North Ave. <br/>Baltimore, MD 21201</p></li>
+                    <li><h4>D Center</h4></li>
                     <li><h5>D Center Gallery</h5></li>
-                    <li><p>18 W. North Ave. <br/>Baltimore, MD 21218</p></li>
+                    <li><p>18 W. North Ave. <br/>Baltimore, MD 21218</p></li>
                     <li><h4>Off Campus</h4></li>
                     <li><h5>Curatorial Practice</h5></li>
                     <li><p>Curatorial Students take over individual galleries all across Baltimore. View the Curatorial Map »</p></li>
